ingress/haandvaerker-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haandvaerker-ingress
  namespace: gruppe1
  annotations:
    ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: www.gruppe1.haandvaerker.com
    http:
      paths:
      - path: /frontend
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /backend
        backend:
          serviceName: backend-service
          servicePort: 80
